--- a/package.json
+++ b/package.json
@@ -1,5 +1,6 @@
 {
   "name": "countries-app",
+  "homepage": "https://leonardof02.github.io/countries-app/",
   "private": true,
   "version": "0.0.0",
   "type": "module",
